[package]
name = "simple-redis"
authors = ["hsl"]
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
anyhow = "1.0.83"
enum_dispatch = "0.3.13"
thiserror = "1.0.60"
dashmap = "5.5.3"
lazy_static = "1.4.0"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros","net"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio-util = { version = "0.7.11", features = ["codec"] }
tokio-stream = "0.1.15"
features = "0.10.0"
futures = { version = "0.3.30", default-features = false }
